--- a/package.json
+++ b/package.json
@@ -14,21 +14,24 @@
     "beautifulsoup4": "^0.0.1-security",
     "flask": "^0.2.10",
     "flask-cors": "^0.0.1",
+    "lucide-react": "^0.510.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
-    "requests": "^0.3.0",
-    "tailwindcss": "^4.1.6"
+    "requests": "^0.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6",
     "vite": "^6.3.5"
   }
 }
